--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>  
         </div>
         <div class="section space" id="section2">
-            <h2>Mars has two moons, Phobos and Deimos.<br>These are Thought to be capture asteroids.</h2>
+            <h2>Mars has two moons, Phobos and Deimos.<br>These are Thought to be captured asteroids.</h2>
             <img class="moons" id="marsmoons" src="images/marsFlat.png">
             <img class="moons" id="phobosmoons" src="images/phobos.png">
             <img class="moons" id="deimosmoons" src="images/deimos.png">
